crates/core/runner/tests/snapshots/dep_graph_new_test__run_target__runs_all_projects_for_target_all_scope.snap
---
source: crates/core/runner/tests/dep_graph_new_test.rs
assertion_line: 277
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(basic:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="SyncNodeProject(buildA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(buildC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(buildA:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="RunTarget(buildC:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="SyncNodeProject(buildB)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(buildB:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 0 [ arrowhead=box, arrowtail=box]
    5 -> 0 [ arrowhead=box, arrowtail=box]
    4 -> 5 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 4 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 5 [ arrowhead=box, arrowtail=box]
    6 -> 3 [ arrowhead=box, arrowtail=box]
    6 -> 7 [ arrowhead=box, arrowtail=box]
    8 -> 0 [ arrowhead=box, arrowtail=box]
    9 -> 1 [ arrowhead=box, arrowtail=box]
    9 -> 8 [ arrowhead=box, arrowtail=box]
}

